--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,18 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clearfix {
+    zoom:1
+}
+
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
+
 .row {
     max-width: 1140px;
     margin: 0 auto;
@@ -83,6 +95,36 @@ h3 {
     margin-bottom: 10px;
 }
 
+.icon-small {
+    display: inline-block;
+    width: 30px;
+    text-align: center;
+    color: #e67e22;
+    font-size: 100%;
+    /* Secret to align icon & text center */
+    line-height: 120%;
+    vertical-align: middle;
+
+}
+
+
+/**** LINKS ****/
+
+a:link,
+a:visited {
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom: 1px;
+    transform: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active {
+    color: #555;
+    border-bottom: 1px solid transparent;
+}
+
 .long-copy {
 
     line-height: 154%;
@@ -133,12 +175,13 @@ h3 {
     color: #ffffff;
 }
 
-/* Header  */
+/**** Header  ****/
 
 header {
     background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
     background-position: cover;
     background-position: center;
+    background-attachment: fixed;
     height: 100vh;
 }
 
@@ -184,4 +227,205 @@ header {
 .main-nav li a:active {
 
     border-bottom: 2px solid #cf6d17; 
+}
+
+/**** ShowCase Section  ****/
+
+.meals-showcase {
+    list-style: none;
+    width: 100%;
+}
+
+.meals-showcase li {
+    display: block;
+    float: left;
+    width: 25%;
+    
+}
+
+.meal-photo {
+    width: 100%;
+    margin: 0;
+    overflow: hidden;
+    background-color: #000000;
+}
+
+.meal-photo img {
+    opacity: 0.7;
+    width: 100%;
+    height: auto;
+    transform: scale(1.15);
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.meal-photo img:hover {
+    opacity: 1;
+    transform: scale(1.03);
+}
+
+/****  HOW IT WORKS  ****/
+
+.section-steps {
+   background-color: #f4f4f4;
+} 
+
+.steps-box:first-child {
+    /*float: left;*/
+    text-align: right;
+    padding-right: 3%; 
+    margin-top: 30px;
+}
+
+.steps-box:last-child {
+    padding-left: 3%;
+    margin-top: 70px;
+}
+
+.app-screen {
+
+    width: 40%;
+}
+
+.work-steps {
+    margin-bottom: 50px;
+}
+
+.work-steps:last-of-type {
+
+    margin-bottom: 80px;
+}
+
+.work-steps div {
+    color: #e67e22;
+    display: inline-block;
+    width: 55px;
+    height: 55px;
+    border: 2px solid #e67e22;
+    border-radius: 50%;
+    text-align: center;
+    padding: 5px;
+    float: left;
+    font-size: 150%;
+    margin-right: 25px;
+}
+
+.btn-app:link,
+.btn-app:visited {
+    border: 0;
+}
+
+.btn-app img {
+    height: 50px;
+    width: auto;
+    margin-right: 10px; 
+}
+
+/****  CITIES SECTION  ****/
+
+.box img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+.city-feature {
+    margin-bottom: 5px;
+}
+
+/****  TESTIMONIALS  ****/
+
+.section-testimonial {
+    background-image: linear-gradient(rgba(0,0,0, 0.8), rgba(0,0,0,0.8)), url(img/back-customers.jpg);
+    background-attachment: fixed;
+    background-position: cover;
+    color: #ffffff;
+    
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 50px;
+}
+blockquote::before {
+    content: "\201C";
+    font-size: 400%;
+    display: block;
+    position: absolute;
+    top: -2px;
+    left: -2px;
+}
+
+cite {
+    
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
+
+/****  PRICE SECTION  ****/
+
+.section-plans {
+    background-color: #f4f4f4;
+}
+
+.plan-box {
+    background-color: #ffffff;
+    border-radius: 5px;
+    width: 90%;
+    margin-left: 5%;
+}
+
+.plan-box div {
+    padding: 15px;
+    border-bottom: 1px solid #e8e8e8;
+}
+
+.plan-price {
+    font-size: 300%;
+    margin-bottom: 10px;
+    font-weight: 100;
+    color: #e67e22;
+    box-shadow: 0 2px 2px #efefef;
+}
+
+.plan-box span {
+    font-size: 30%;
+    font-weight: 300;
+}
+
+.plan-price-meal {
+    font-size: 80%;
+}
+
+.plan-box ul {
+    list-style-type: none;
+}
+
+.plan-box ul li {
+    padding: 5px;
+}
+
+.plan-box ul li i {
+    margin-right: 5px;
+}
+
+.plan-box div:first-child {
+    background-color: #fcfcfc;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.plan-box div:last-child {
+    text-align: center;
 }
