--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,8 @@ a:active {
 }
 
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
 
     text-decoration: none;
     display: inline-block;
@@ -145,11 +146,13 @@ a:active {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
 
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #ffffff;
+    margin-right: 15px;
 }
 
 .btn-ghost:link,
@@ -159,7 +162,8 @@ a:active {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit] {
     background-color: #cf6d17;
 }
 
@@ -429,3 +433,109 @@ cite img {
 .plan-box div:last-child {
     text-align: center;
 }
+
+/****  CONTACT FORM  ****/
+
+.section-contact {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 8px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+/* 
+*:focus{
+    outline: none;
+} 
+*/
+
+/****  FOOTER  ****/
+
+footer {
+    background-color: #333;
+    padding: 40px;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.icon-links {
+    float: right;
+}
+
+.footer-nav li,
+.icon-links li
+ {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.icon-links li a:link,
+.icon-links li a:visited,
+.social-links li a:link,
+.social-links li a:visited
+ {
+    border: 0;
+    text-decoration: none;
+    color: #888;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+
+    color: #ddd;
+}
+
+footer p {
+
+    color: #888;
+    text-align: center;
+    font-size: 90%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+    font-size: 180%;
+}
+
+.fa-facebook-square,
+.fa-twitter,
+.fa-google-plus,
+..fa-instagram {
+    transition: color 0.2s;
+}
+
+
+.fa-facebook-square:hover {
+    color: #3b5998;
+}
+
+.fa-twitter:hover {
+    color: #3b5998;
+}
+
+.fa-google-plus:hover {
+    color: #dd4b39;
+}
+
+.fa-instagram:hover {
+    color: #517fa4;
+}
+
+
